@@ -1,7 +1,23 @@
+/*
+ * Copyright [2021] [MaxKey of copyright http://www.maxkey.top]
+ * 
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * 
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+ 
+
 package org.apache.mybatis.jpa;
 
 import java.util.StringTokenizer;
-
 import org.apache.ibatis.executor.statement.RoutingStatementHandler;
 import org.apache.ibatis.executor.statement.StatementHandler;
 import org.apache.ibatis.plugin.Interceptor;
@@ -37,16 +53,12 @@ public abstract class AbstractStatementHandlerInterceptor  implements Intercepto
 	public void setDialectString(String dialectString) {
 		this.dialectString = dialectString;
 		try {
-			
-			this.dialect =(Dialect)Class.forName(dialectString).newInstance();
-			_logger.debug("dialect from String : "+dialectString);
-		} catch (InstantiationException e) {
+			_logger.debug("dialect from String : " + dialectString);
+			this.dialect =(Dialect)Class.forName(dialectString).getDeclaredConstructor().newInstance();
+		} catch (Exception e) {
 			e.printStackTrace();
-		} catch (IllegalAccessException e) {
-			e.printStackTrace();
-		} catch (ClassNotFoundException e) {
-			e.printStackTrace();
-		}
+			_logger.error("Dialect new error : " , e);
+		} 
 	}
 
 	protected StatementHandler getStatementHandler(Invocation invocation) {
@@ -72,7 +84,7 @@ public abstract class AbstractStatementHandlerInterceptor  implements Intercepto
 				&& rowBounds.getLimit() < RowBounds.NO_ROW_LIMIT);
 	}
 	
-	  protected String removeBreakingWhitespace(String original) {
+	protected String removeBreakingWhitespace(String original) {
 		    StringTokenizer whitespaceStripper = new StringTokenizer(original);
 		    StringBuilder builder = new StringBuilder();
 		    while (whitespaceStripper.hasMoreTokens()) {
@@ -80,5 +92,5 @@ public abstract class AbstractStatementHandlerInterceptor  implements Intercepto
 		      builder.append(" ");
 		    }
 		    return builder.toString();
-		  }
+	}
 }
